# ttrpc-rust

./: .gitignore  Cargo.toml  MAINTAINERS  Makefile  README.md  RELEASE.md  build.rs  deny.toml  install_protoc.sh  rust-toolchain.toml
.github/ISSUE_TEMPLATE/: bug_report.md  enhancement-request.md  feature_request.md
.github/workflows/: bvt.yml  ci.yml  cov.yml  sanity.yml
codegen/: Cargo.toml  Makefile  README.md
codegen/src/: codegen.rs  lib.rs  svcgen.rs  util.rs
compiler/: Cargo.toml  Makefile  README.md
compiler/src/: codegen.rs  lib.rs  util.rs  vendored.rs
compiler/src/util/: mod.rs  scope.rs  writer.rs
example/: Cargo.toml  Makefile  async-client.rs  async-server.rs  async-stream-client.rs  async-stream-server.rs  build.rs  client.rs  server.rs  utils.rs
example/protocols/: mod.rs
example/protocols/asynchronous/: mod.rs
example/protocols/protos/: health.proto  oci.proto  streaming.proto  test.proto  test_streaming.proto
example/protocols/sync/: mod.rs
example2/: Cargo.toml  Makefile  async_client.rs  async_server.rs  async_stream_client.rs  async_stream_server.rs  build.rs  client.rs  server.rs  utils.rs
example2/protocols/: mod.rs
example2/protocols/asynchronous/: _include.rs  agent.rs  google.protobuf.rs  health.rs  mod.rs  oci.rs  streaming.rs  types.rs
example2/protocols/protos/: agent.proto  health.proto  oci.proto  streaming.proto  test.proto  test_streaming.proto
example2/protocols/protos/google/protobuf/: test_empty.proto
example2/protocols/sync/: _include.rs  agent.rs  health.rs  mod.rs
example2/src/: main.rs
examples/: client.rs  server.rs
examples/protocols/: Cargo.toml  agent.rs  agent_ttrpc.rs  empty.rs  health.rs  health_ttrpc.rs  oci.rs  types.rs
examples/protocols/hack/: update-generated-proto.sh
protoc-rust-ttrpc/: Cargo.toml
protoc-rust-ttrpc/src/: lib.rs
src/: channel.rs  client.rs  common.rs  context.rs  error.rs  lib.rs  macros.rs  proto.rs  server.rs  ttrpc.proto  ttrpc.rs
src/asynchronous/: client.rs  connection.rs  mod.rs  server.rs  shutdown.rs  stream.rs  utils.rs
src/asynchronous/transport/: mod.rs  tcp.rs  unix.rs  vsock.rs  windows.rs
src/sync/: channel.rs  client.rs  mod.rs  server.rs  utils.rs
src/sync/sys/: mod.rs
src/sync/sys/unix/: mod.rs  net.rs
src/sync/sys/windows/: net.rs
tests/: run-examples.rs  sync-test.rs
ttrpc-codegen/: Cargo.toml  Makefile  README.md
ttrpc-codegen/src/: convert.rs  lib.rs  model.rs  parser.rs
