[package]
name = "ttrpc"
version = "0.7.1"
authors = ["The AntFin Kata Team <kata@list.alibaba-inc.com>"]
edition = "2018"
license = "Apache-2.0"
keywords = ["ttrpc", "protobuf", "rpc"]
readme = "README.md"
repository = "https://github.com/containerd/ttrpc-rust"
homepage = "https://github.com/containerd/ttrpc-rust"
description = "A Rust version of ttrpc."

[dependencies]
protobuf = { version = "3.1.0" }
libc = { version = "0.2.59", features = [ "extra_traits" ] }
nix = "0.23.0"
log = "0.4"
byteorder = "1.3.2"
thiserror = "1.0"
async-trait = { version = "0.1.31", optional = true }
tokio = { version = "1", features = ["rt", "sync", "io-util", "macros", "time"], optional = true }
futures = { version = "0.3", optional = true }

[target.'cfg(windows)'.dependencies] 
windows-sys = {version = "0.45", features = [ "Win32_Foundation", "Win32_Storage_FileSystem", "Win32_System_IO", "Win32_System_Pipes", "Win32_Security", "Win32_System_Threading"]}

[target.'cfg(any(target_os = "linux", target_os = "android"))'.dependencies]
tokio-vsock = { version = "0.3.1", optional = true }

[build-dependencies]
protobuf-codegen = "3.1.0"

[dev-dependencies]
assert_cmd = "2.0.7"

[features]
default = ["sync"]
async = ["async-trait", "tokio", "futures", "tokio-vsock"]
sync = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
