[workspace]
members = [
    "./compiler",
    "./ttrpc-codegen",
    "./example",
    "./"
]
resolver = "2"

[workspace.package]
edition = "2018"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/containerd/ttrpc-rust"
homepage = "https://github.com/containerd/ttrpc-rust"
authors = ["The AntFin Kata Team <kata@list.alibaba-inc.com>"]

[workspace.dependencies]
# The dependencies in this section can be used by the crates in this
# workspace by specifying `workspace = true` instead of the crate
# version. For example, for protobuf:
#   protobuf = { workspace = true }
ttrpc = { version = "0.8.4", path = "./" }
ttrpc-codegen = { version = "0.5.0", path = "./ttrpc-codegen" }
ttrpc-compiler = { version = "0.7.0", path = "./compiler" }
protobuf = "3.7.2"
protobuf-codegen = "3.7.2"
protobuf-support = "3.7.2"

[package]
name = "ttrpc"
version = "0.8.4"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
keywords = ["ttrpc", "protobuf", "rpc"]
readme = "README.md"
description = "A Rust version of ttrpc."
rust-version = "1.70"

[dependencies]
protobuf = { workspace = true }
libc = { version = "0.2.59", features = [ "extra_traits" ] }
nix = "0.26.2"
log = "0.4"
byteorder = "1.3.2"
thiserror = "1.0"
async-trait = { version = "0.1.31", optional = true }
async-stream = { version = "0.3.6", optional = true }
tokio = { version = "1", features = ["rt", "sync", "io-util", "macros", "time", "net"], optional = true }
futures = { version = "0.3", optional = true }
crossbeam = "0.8.0"

[target.'cfg(windows)'.dependencies]
windows-sys = {version = "0.48", features = [ "Win32_Foundation", "Win32_Storage_FileSystem", "Win32_System_IO", "Win32_System_Pipes", "Win32_Security", "Win32_System_Threading"]}

[target.'cfg(any(target_os = "linux", target_os = "android"))'.dependencies]
tokio-vsock = { version = "0.7.0", optional = true }

[build-dependencies]
# lock home to avoid conflict with latest version
home = "=0.5.9"
protobuf-codegen = { workspace = true }

[features]
default = ["sync"]
async = ["async-trait", "async-stream", "tokio", "futures", "tokio-vsock"]
sync = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
