[package]
name = "ttrpc-compiler"
version = "0.4.4"
edition = "2018"
authors = ["The AntFin Kata Team <kata@list.alibaba-inc.com>"]
license = "Apache-2.0"
keywords = ["compiler", "ttrpc", "protobuf"]
description = "ttRPC compiler for ttrpc"
categories = ["network-programming"]
repository = "https://github.com/containerd/ttrpc-rust/tree/master/compiler"
homepage = "https://github.com/containerd/ttrpc-rust/tree/master/compiler"
readme = "README.md"

[dependencies]
protobuf = "2.28.0"
# protobuf-codegen3 is a protobuf-codegen version that supports optional fields better
protobuf-codegen = { package = "protobuf-codegen3", version = "2.28.2" }
prost = "0.8"
prost-build = "0.8"
prost-types = "0.8"
derive-new = "0.5"
tempfile = "3.0"

[[bin]]
name = "ttrpc_rust_plugin"
