[package]
name = "ttrpc-compiler"
version = "0.7.0"
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
readme = "README.md"
keywords = ["compiler", "ttrpc", "protobuf"]
description = "ttRPC compiler for ttrpc"
categories = ["network-programming"]
repository = "https://github.com/containerd/ttrpc-rust/tree/master/compiler"
homepage = "https://github.com/containerd/ttrpc-rust/tree/master/compiler"

[dependencies]
protobuf = { workspace = true }
protobuf-codegen = { workspace = true }
prost = "0.8"
prost-build = "0.8"
prost-types = "0.8"
derive-new = "0.5"
tempfile = "3.0"

[[bin]]
name = "ttrpc_rust_plugin"
