[package]
name = "ttrpc-example"
version = "0.1.0"
authors = ["The AntFin Kata Team <kata@list.alibaba-inc.com>"]
edition = "2018"
license = "Apache-2.0"
keywords = ["ttrpc", "protobuf", "rpc"]
readme = "README.md"
repository = "https://github.com/alipay/ttrpc-rust"
homepage = "https://github.com/alipay/ttrpc-rust"
description = "An example of ttrpc."

[dependencies]
protobuf = "2.8.0"
bytes = "0.4.11"
libc = "0.2.59"
byteorder = "1.3.2"
log = "0.4.6"
simple-logging = "2.0.2"
nix = "0.15.0"
ttrpc = { path = "../" }


[[example]]
name = "client"
path = "./client.rs"

[[example]]
name = "server"
path = "./server.rs"

[build-dependencies]
protoc-rust = "2.8.0"
cmd_lib = "0.7.8"
