[package]
name = "ttrpc-example"
version = "0.2.0"
authors = ["The AntFin Kata Team <kata@list.alibaba-inc.com>"]
edition = "2018"
license = "Apache-2.0"
keywords = ["ttrpc", "protobuf", "rpc"]
readme = "README.md"
repository = "https://github.com/alipay/ttrpc-rust"
homepage = "https://github.com/alipay/ttrpc-rust"
description = "An example of ttrpc."

[dev-dependencies]
protobuf = "2.27.1"
bytes = "0.4.11"
libc = "0.2.79"
byteorder = "1.3.2"
log = "0.4.6"
simple-logging = "2.0.2"
nix = "0.23.0"
ttrpc = { path = "../", features = ["async"] }
ctrlc = { version = "3.0", features = ["termination"] }
tokio = { version = "1.0.1", features = ["signal", "time"] }
async-trait = "0.1.42"


[[example]]
name = "client"
path = "./client.rs"

[[example]]
name = "server"
path = "./server.rs"

[[example]]
name = "async-server"
path = "./async-server.rs"

[[example]]
name = "async-client"
path = "./async-client.rs"

[build-dependencies]
ttrpc-codegen = { path = "../ttrpc-codegen"}
