[package]
name = "ttrpc-example"
version = "0.2.0"
authors = ["The AntFin Kata Team <kata@list.alibaba-inc.com>"]
edition = "2018"
license = "Apache-2.0"
keywords = ["ttrpc", "protobuf", "rpc"]
readme = "README.md"
repository = "https://github.com/alipay/ttrpc-rust"
homepage = "https://github.com/alipay/ttrpc-rust"
description = "An example of ttrpc."

[dependencies]
prost = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ttrpc-codegen = { path = "../codegen" }
bytes = "0.4.11"
libc = "0.2.79"
byteorder = "1.3.2"
log = "0.4.6"
simple-logging = "2.0.2"
nix = "0.23.0"
ttrpc = { path = "../", features = ["sync", "async", "prost"] }
ctrlc = { version = "3.0", features = ["termination"] }
tokio = { version = "1.0.1", features = ["signal", "time"] }
async-trait = "0.1.42"
rand = "0.8.5"

[build-dependencies]
ttrpc-codegen = { path = "../codegen" }

[[example]]
name = "client"
path = "./client.rs"

[[example]]
name = "server"
path = "./server.rs"

[[example]]
name = "async-server"
path = "./async_server.rs"

[[example]]
name = "async-client"
path = "./async_client.rs"

[[example]]
name = "async-stream-server"
path = "./async_stream_server.rs"

[[example]]
name = "async-stream-client"
path = "./async_stream_client.rs"
