[package]
name = "protoc-rust-ttrpc"
version = "0.1.0"
authors = ["Tim Zhang <tim@hyper.sh>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protobuf = { version = "=2.14.0" }
protobuf-codegen-pure = "=2.14.0"
protobuf-codegen = "=2.14.0"
ttrpc-compiler = { path = "../compiler" }
