[package]
name = "ttrpc-codegen"
version = "0.5.0"
edition = "2018"
authors = ["The AntFin Kata Team <kata@list.alibaba-inc.com>"]
license = "Apache-2.0"
keywords = ["codegen", "ttrpc", "protobuf"]
description = "Rust codegen for ttrpc using ttrpc-compiler crate"
categories = ["network-programming", "development-tools::build-utils"]
repository = "https://github.com/containerd/ttrpc-rust/tree/master/ttrpc-codegen"
homepage = "https://github.com/containerd/ttrpc-rust/tree/master/ttrpc-codegen"
readme = "README.md"


[dependencies]
# lock home to avoid conflict with latest version
home = "=0.5.9"
protobuf-support = "3.7.2"
protobuf = "3.7.2"
protobuf-codegen = "3.7.2"
ttrpc-compiler = { version = "0.7.0", path = "../compiler" }
