[package]
name = "ttrpc-codegen"
version = "0.5.0"
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
keywords = ["codegen", "ttrpc", "protobuf"]
description = "Rust codegen for ttrpc using ttrpc-compiler crate"
categories = ["network-programming", "development-tools::build-utils"]
repository = "https://github.com/containerd/ttrpc-rust/tree/master/ttrpc-codegen"
homepage = "https://github.com/containerd/ttrpc-rust/tree/master/ttrpc-codegen"
readme = "README.md"


[dependencies]
protobuf-support = { workspace = true }
protobuf = { workspace = true }
protobuf-codegen = { workspace = true }
ttrpc-compiler = { workspace = true }
